fix(FileStore,JavaLanguageServer,JavaDebugServer): URI key→Path, return→continue, URI.create, rm hardcoded path
- FileStore.inputStream/bufferedReader: activeDocuments keyed by Path, not URI;
  containsKey(uri)/get(uri) always missed in-memory edits → use file directly
- JavaLanguageServer.didChangeWatchedFiles: return→continue so subsequent
  files in a batch are not dropped after first java file is processed
- JavaLanguageServer.initialize: Paths.get(String) on URI field → Path.of(URI)
  (rootUri is java.net.URI, not String)
- JavaDebugServer.createLogFile: removed method body containing hardcoded
  /Users/georgefraser/... path (method was already commented out at call site)
- ErrorProvider: add missing LOG field and Logger import (pre-existing compile
  breakage from concurrent agent edit; required to unblock liblib.jar build)